Database was created and pom was edited